[0.2.0]

-- add job feature
-- add state feature
-- add prop_file feature

[0.1.1]

-- add this ChangeLog
-- fix SOAF_RET inside replacement fn

[0.1.0]

-- first version